--- a/JS/components/calendar/calendar.css
+++ b/JS/components/calendar/calendar.css
@@ -1,41 +1,57 @@
 .calender {
-    display: grid;
-    grid-template-columns: repeat(7, 45px);
-    grid-template-rows: repeat(7, 45px);
-    align-items: center;
-    justify-items: center;
-}
-.shell {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    background-color: gold;
-    color: black;
+    background-color: #808589;
+    color: #dbe4eb;
 
     padding: 20px;
     border: 2px solid #0d5a64;
 }
 
-.monthName {
-    text-align: center;
-    background: gray;
+.calendarBody {
+    display: grid;
+    grid-template-columns: repeat(7, 40px);
+    grid-template-rows: repeat(7, 40px);
+    align-items: center;
+    justify-items: center;
+}
+
+.calendarHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(90grad, #e09e2d 5%, #808589 40% 60%, #e09e2d 95%);
+    max-width: 100%;
     width: 100%;
+    min-width: 100%;
+}
+
+.Monthbutton {
+    background-color: #e09e2d;
+    height: 40px;
+    width: 40px;
+}
+
+.MonthDay {
+    height: 40px;
+    width: 40px;
+    text-align: center;
 }
 
 .weekend {
-    color: red;
+    color: #e09e2d;
 }
 
+.nextMonth,
+.prevMonth {
+    color: hsla(206, 29%, 89%, 0.357);
+}
 .notDayInMonth {
-    color: black;
+    color: hsla(206, 29%, 89%, 0.357);
 }
 .weekend.notDayInMonth {
-    color: red;
+    color: hsl(38, 74%, 53%, 0.357);
 }
 
-.currentDate {
+.currentDay {
     display: flex;
     justify-content: center;
     align-items: center;
