--- a/JS/styles/layout.css
+++ b/JS/styles/layout.css
@@ -142,9 +142,10 @@ input[type="email"].invalid {
 }
 
 form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px; /* Добавляем отступ сверху */
 }
 
 label {
@@ -186,6 +187,7 @@ button[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 20px; /* Добавляем отступ сверху для кнопки регистрации */
 }
 
 button[type="submit"]:hover {
