--- a/mypage/styles/style.css
+++ b/mypage/styles/style.css
@@ -94,6 +94,7 @@ section {
 }
 
 .section2 {
+    padding-top: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -137,5 +138,24 @@ section {
     display: flex;
     flex-direction: column;
     align-items: start;
+}
+
+
+.section1 .overlay-image {
+    position: absolute;
+    top: 50px;
+    left: -300px;
+    z-index: 2;
+}
+
+.imagebotanic {
+    position: absolute;
+    top: 50px;
+    left: 30px; /* Положительное значение смещения вправо */
+    margin-left: -150px; /* Отрицательное значение для внешнего отступа влево */
+    margin-top: 120px;
+    width: 400px;
+    height: 505px;
+    object-fit: cover;
 }
 
